--- a/public/pages/about.html
+++ b/public/pages/about.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Main Page</title>
+    <title>Title</title>
 </head>
 <body>
-<h1>Hello Main</h1>
+
 </body>
 </html>
